# EAGE_2023_Hackathon_MahadJanjua

./: README.md  main_pipeline.py  pyproject.toml  sketch_server.py  sketch_server_v2.py  sketch_server_v3.py  sketch_test.py  test.csv  test_st.py
.streamlit/: config.toml  style.css
data_method_2/: data_method_two_saved.csv
frontend/: ProcessFunctions.py  StreamlitFunctions.py  StructuredProcess.py  UnstructuredProcess.py  UnstructuredProcessSingle.py  streamlit_state_handling.py
scripts/: chat_engine.sh
